--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-1.65MB/s(Youtube:不良林), server: 217.30.10.68, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 保加利亚-1.01MB/s(Youtube:不良林), server: 213.183.63.221, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 保加利亚-2.88MB/s(Youtube:不良林), server: 213.183.63.221, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 🇷🇺 俄罗斯联邦-588.3KB/s(Youtube:不良林), server: 213.183.53.177, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 保加利亚-711.5KB/s(Youtube:不良林), server: 213.183.63.217, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇷🇺 俄罗斯联邦-897.8KB/s(Youtube:不良林), server: 213.183.53.208, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇷🇺 俄罗斯联邦-5.08MB/s(Youtube:不良林), server: 213.183.53.179, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇺🇸 美国-2.73MB/s(Youtube:不良林), server: 38.68.134.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇳🇱 荷兰-3.15MB/s(Youtube:不良林), server: 213.183.51.171, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林), server: 213.183.53.214, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
   - {name: 🇺🇸 美国-3.63MB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-3.54MB/s(Youtube:不良林), server: 169.197.142.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-883.7KB/s(Youtube:不良林), server: 169.197.142.39, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-3.45MB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-3.64MB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.98MB/s(Youtube:不良林), server: 169.197.142.39, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-1.65MB/s(Youtube:不良林)
-      - 保加利亚-1.01MB/s(Youtube:不良林)
-      - 保加利亚-2.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-588.3KB/s(Youtube:不良林)
-      - 保加利亚-711.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-897.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.15MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-1.65MB/s(Youtube:不良林)
-      - 保加利亚-1.01MB/s(Youtube:不良林)
-      - 保加利亚-2.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-588.3KB/s(Youtube:不良林)
-      - 保加利亚-711.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-897.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.15MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-1.65MB/s(Youtube:不良林)
-      - 保加利亚-1.01MB/s(Youtube:不良林)
-      - 保加利亚-2.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-588.3KB/s(Youtube:不良林)
-      - 保加利亚-711.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-897.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.15MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-1.65MB/s(Youtube:不良林)
-      - 保加利亚-1.01MB/s(Youtube:不良林)
-      - 保加利亚-2.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-588.3KB/s(Youtube:不良林)
-      - 保加利亚-711.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-897.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.15MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-1.65MB/s(Youtube:不良林)
-      - 保加利亚-1.01MB/s(Youtube:不良林)
-      - 保加利亚-2.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-588.3KB/s(Youtube:不良林)
-      - 保加利亚-711.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-897.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.15MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-1.65MB/s(Youtube:不良林)
-      - 保加利亚-1.01MB/s(Youtube:不良林)
-      - 保加利亚-2.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-588.3KB/s(Youtube:不良林)
-      - 保加利亚-711.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-897.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.15MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-1.65MB/s(Youtube:不良林)
-      - 保加利亚-1.01MB/s(Youtube:不良林)
-      - 保加利亚-2.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-588.3KB/s(Youtube:不良林)
-      - 保加利亚-711.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-897.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.15MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
