--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-897.8KB/s(Youtube:不良林), server: 213.183.53.208, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇷🇺 俄罗斯联邦-5.08MB/s(Youtube:不良林), server: 213.183.53.179, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇳🇱 荷兰-1.55MB/s(Youtube:不良林), server: 213.183.59.206, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林), server: 213.183.53.208, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇷🇺 俄罗斯联邦-5.31MB/s(Youtube:不良林), server: 213.183.53.208, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇺🇸 美国-2.73MB/s(Youtube:不良林), server: 38.68.134.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇳🇱 荷兰-3.15MB/s(Youtube:不良林), server: 213.183.51.171, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林), server: 213.183.53.214, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇨🇳 中国-8.97MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.63MB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-3.54MB/s(Youtube:不良林), server: 169.197.142.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-883.7KB/s(Youtube:不良林), server: 169.197.142.39, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-897.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-5.08MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.15MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-897.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-5.08MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.15MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-897.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-5.08MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.15MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-897.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-5.08MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.15MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-897.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-5.08MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.15MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-897.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-5.08MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.15MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-897.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-5.08MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.15MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
