--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-2.15MB/s(Youtube:不良林), server: 213.183.59.211, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇳🇱 荷兰-1.34MB/s(Youtube:不良林), server: 213.183.59.206, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
-  - {name: 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林), server: 185.167.116.24, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
-  - {name: 🇨🇳 中国-8.28MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林), server: 213.183.53.177, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇷🇺 俄罗斯联邦-688.0KB/s(Youtube:不良林), server: 213.183.53.202, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇳🇱 荷兰-2.19MB/s(Youtube:不良林), server: 213.183.51.172, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 保加利亚-2.44MB/s(Youtube:不良林), server: 213.183.63.221, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇩🇪 德国-450.4KB/s(Youtube:不良林), server: 5.183.179.139, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 保加利亚-2.05MB/s(Youtube:不良林), server: 213.183.63.221, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
   - {name: 🇺🇸 美国-3.63MB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 169.197.142.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-883.7KB/s(Youtube:不良林), server: 169.197.142.39, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-688.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.19MB/s(Youtube:不良林)
+      - 保加利亚-2.44MB/s(Youtube:不良林)
+      - 🇩🇪 德国-450.4KB/s(Youtube:不良林)
+      - 保加利亚-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-688.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.19MB/s(Youtube:不良林)
+      - 保加利亚-2.44MB/s(Youtube:不良林)
+      - 🇩🇪 德国-450.4KB/s(Youtube:不良林)
+      - 保加利亚-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-688.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.19MB/s(Youtube:不良林)
+      - 保加利亚-2.44MB/s(Youtube:不良林)
+      - 🇩🇪 德国-450.4KB/s(Youtube:不良林)
+      - 保加利亚-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-688.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.19MB/s(Youtube:不良林)
+      - 保加利亚-2.44MB/s(Youtube:不良林)
+      - 🇩🇪 德国-450.4KB/s(Youtube:不良林)
+      - 保加利亚-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-688.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.19MB/s(Youtube:不良林)
+      - 保加利亚-2.44MB/s(Youtube:不良林)
+      - 🇩🇪 德国-450.4KB/s(Youtube:不良林)
+      - 保加利亚-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-688.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.19MB/s(Youtube:不良林)
+      - 保加利亚-2.44MB/s(Youtube:不良林)
+      - 🇩🇪 德国-450.4KB/s(Youtube:不良林)
+      - 保加利亚-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-688.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.19MB/s(Youtube:不良林)
+      - 保加利亚-2.44MB/s(Youtube:不良林)
+      - 🇩🇪 德国-450.4KB/s(Youtube:不良林)
+      - 保加利亚-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
