--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-688.0KB/s(Youtube:不良林), server: 213.183.53.202, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇳🇱 荷兰-2.19MB/s(Youtube:不良林), server: 213.183.51.172, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
-  - {name: 保加利亚-2.44MB/s(Youtube:不良林), server: 213.183.63.221, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
-  - {name: 🇩🇪 德国-450.4KB/s(Youtube:不良林), server: 5.183.179.139, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 保加利亚-2.05MB/s(Youtube:不良林), server: 213.183.63.221, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇦🇺 澳大利亚-345.1KB/s(Youtube:不良林), server: 185.167.116.253, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 波兰-1.37MB/s(Youtube:不良林), server: 217.30.10.64, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇨🇳 中国-11.07MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-390.5KB/s(Youtube:不良林), server: 213.183.53.207, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
+  - {name: 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林), server: 185.167.117.171, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇺🇸 美国-1.62MB/s(Youtube:不良林), server: 167.88.63.82, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-3.63MB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 169.197.142.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-883.7KB/s(Youtube:不良林), server: 169.197.142.39, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-2.98MB/s(Youtube:不良林), server: 169.197.142.39, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-688.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.19MB/s(Youtube:不良林)
-      - 保加利亚-2.44MB/s(Youtube:不良林)
-      - 🇩🇪 德国-450.4KB/s(Youtube:不良林)
-      - 保加利亚-2.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-345.1KB/s(Youtube:不良林)
+      - 波兰-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-390.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-688.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.19MB/s(Youtube:不良林)
-      - 保加利亚-2.44MB/s(Youtube:不良林)
-      - 🇩🇪 德国-450.4KB/s(Youtube:不良林)
-      - 保加利亚-2.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-345.1KB/s(Youtube:不良林)
+      - 波兰-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-390.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-688.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.19MB/s(Youtube:不良林)
-      - 保加利亚-2.44MB/s(Youtube:不良林)
-      - 🇩🇪 德国-450.4KB/s(Youtube:不良林)
-      - 保加利亚-2.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-345.1KB/s(Youtube:不良林)
+      - 波兰-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-390.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-688.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.19MB/s(Youtube:不良林)
-      - 保加利亚-2.44MB/s(Youtube:不良林)
-      - 🇩🇪 德国-450.4KB/s(Youtube:不良林)
-      - 保加利亚-2.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-345.1KB/s(Youtube:不良林)
+      - 波兰-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-390.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-688.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.19MB/s(Youtube:不良林)
-      - 保加利亚-2.44MB/s(Youtube:不良林)
-      - 🇩🇪 德国-450.4KB/s(Youtube:不良林)
-      - 保加利亚-2.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-345.1KB/s(Youtube:不良林)
+      - 波兰-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-390.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-688.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.19MB/s(Youtube:不良林)
-      - 保加利亚-2.44MB/s(Youtube:不良林)
-      - 🇩🇪 德国-450.4KB/s(Youtube:不良林)
-      - 保加利亚-2.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-345.1KB/s(Youtube:不良林)
+      - 波兰-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-390.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-688.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.19MB/s(Youtube:不良林)
-      - 保加利亚-2.44MB/s(Youtube:不良林)
-      - 🇩🇪 德国-450.4KB/s(Youtube:不良林)
-      - 保加利亚-2.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-345.1KB/s(Youtube:不良林)
+      - 波兰-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-390.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
